--- a/Shared (Extension)/Resources/popup.css
+++ b/Shared (Extension)/Resources/popup.css
@@ -3,12 +3,20 @@
 }
 
 body {
-    width: 100px;
-    padding: 10px;
-
     font-family: system-ui;
-    text-align: center;
 }
+
+.color-option {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    margin-right: 10px;
+  }
+
+  #color-demo {
+    display: flex;
+    /* justify-content: flex-start; */
+  }
 
 @media (prefers-color-scheme: dark) {
     /* Dark Mode styles go here. */
